welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:1: error: not found: value dei1
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {if (noDoubles&&(dei1==die2)) {	if (die1==6) return die1+1
                                                                                 ^